--- a/backend-book-service/package.json
+++ b/backend-book-service/package.json
@@ -11,6 +11,7 @@
     "express": "^4.19.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "sequelize": "^6.37.3"
   }
 }
